--- a/systemrdl-test/template.rdl
+++ b/systemrdl-test/template.rdl
@@ -1,21 +1,156 @@
-addrmap some_map {
-    signal {
-        name = "Generic Reset Signal";
-        desc = "This is a generic reset signal used to reset";
-    } generic_reset;
+signal {
+	name = "global_reset";
+	desc = "Default";
+	activehigh;
+} global_reset;
 
-    regfile {
-        reg {
-            name = "reg_name1";
-            desc = "reg_desc1";
-        } reg_abbr1;
+addrmap module_unnamed{
+	regfile {
+		name = "template1";
+		desc = "Default";
 
-        reg {
-            name = "reg_name2";
-            desc = "reg_desc2";
-        } reg_abbr2;
-    }
-    
+		external reg {
+			name = "TEMPLATE寄存器";
+			desc = "示例寄存器";
+			regwidth = 32;
+
+			field {
+				name = "FIELD_1";
+				desc = "[功能描述]...";
+				sw = r;
+				onread = rclr;
+				
+				resetsignal = global_reset;
+			} FIELD_1[17:17] = 0x0;
+
+			field {
+				name = "FIELD_2";
+				desc = "[功能描述]...";
+				sw = rw;
+				onread = rset;
+				onwrite = woset;
+				resetsignal = global_reset;
+			} FIELD_2[16:14] = 0x0;
+
+			field {
+				name = "FIELD_3";
+				desc = "[功能描述]...";
+				sw = rw;
+				onread = ruser;
+				onwrite = wot;
+				resetsignal = global_reset;
+			} FIELD_3[13:13] = 0x1;
+
+		} TEM1 @0x0;
+
+		reg {
+			name = "TEMPLATE寄存器";
+			desc = "示例寄存器";
+			regwidth = 32;
+
+			field {
+				name = "FIELD_1";
+				desc = "[功能描述]...";
+				sw = r;
+				onread = rclr;
+				
+				resetsignal = global_reset;
+			} FIELD_1[17:17] = 0x0;
+
+			field {
+				name = "FIELD_2";
+				desc = "[功能描述]...";
+				sw = rw;
+				onread = rset;
+				onwrite = woset;
+				resetsignal = global_reset;
+			} FIELD_2[16:14] = 0x0;
+
+			field {
+				name = "FIELD_3";
+				desc = "[功能描述]...";
+				sw = rw;
+				
+				onwrite = wot;
+				resetsignal = global_reset;
+			} FIELD_3[13:13] = 0x1;
+
+		} TEM2 @0x4;
+
+	} template1;
+
+	regfile {
+		name = "template2";
+		desc = "Default";
+
+		reg {
+			name = "TEMPLATE寄存器";
+			desc = "示例寄存器";
+			regwidth = 32;
+
+			field {
+				name = "FIELD_1";
+				desc = "[功能描述]...";
+				sw = r;
+				onread = rclr;
+				
+				resetsignal = global_reset;
+			} FIELD_1[17:17] = 0x0;
+
+			field {
+				name = "FIELD_2";
+				desc = "[功能描述]...";
+				sw = rw;
+				onread = rset;
+				onwrite = woset;
+				resetsignal = global_reset;
+			} FIELD_2[16:14] = 0x0;
+
+			field {
+				name = "FIELD_3";
+				desc = "[功能描述]...";
+				sw = rw;
+				
+				onwrite = wot;
+				resetsignal = global_reset;
+			} FIELD_3[13:13] = 0x1;
+
+		} TEM1 @0x0;
+
+		reg {
+			name = "TEMPLATE寄存器";
+			desc = "示例寄存器";
+			regwidth = 32;
+
+			field {
+				name = "FIELD_1";
+				desc = "[功能描述]...";
+				sw = r;
+				onread = rclr;
+				
+				resetsignal = global_reset;
+			} FIELD_1[17:17] = 0x0;
+
+			field {
+				name = "FIELD_2";
+				desc = "[功能描述]...";
+				sw = rw;
+				onread = rset;
+				onwrite = woset;
+				resetsignal = global_reset;
+			} FIELD_2[16:14] = 0x0;
+
+			field {
+				name = "FIELD_3";
+				desc = "[功能描述]...";
+				sw = rw;
+				
+				onwrite = wot;
+				resetsignal = global_reset;
+			} FIELD_3[13:13] = 0x1;
+
+		} TEM2 @0x4;
+
+	} template2;
 
 };
-
