--- a/test/test_map.rdl
+++ b/test/test_map.rdl
@@ -1,117 +1,161 @@
-`include "child_map_1.rdl"
+// User-defined properties
 
-signal {
-	name = "global_reset";
-	desc = "Default";
-	activehigh;
-} global_reset;
+// Define synchronous reset signals for regslv blocks
+property hj_syncresetsignal {
+    component = field|reg|regfile|addrmap;
+    type = string;
+};
 
-addrmap test_map_1{
-	regfile {
-		name = "test1";
-		desc = "Default";
+// Define whether to generate independent regslv blocks
+property hj_genrtl {
+    component = addrmap;
+    type = boolean;
+};
 
-		reg tem_alias_1{
-			name = "TEM21";
+// generated from Excel Worksheet specification: test_map_1.xlsx
+addrmap test_map_1 {
+	signal {
+		name = "sync_rst_signal_1";
+		activehigh;
+		sync;
+	} sync_rst_local_1;
+
+	signal {
+		name = "sync_rst_signal_2";
+		activehigh;
+		sync;
+	} sync_rst_local_2;
+
+	reg tem_alias_1{
+		name = "TEM21";
+		desc = "xxx";
+		regwidth = 32;
+
+		field {
+			name = "FIELD_1";
 			desc = "xxx";
-			regwidth = 32;
+			sw = r;
+			onread = rclr;
+			hj_syncresetsignal = "sync_rst_local_1";
+		} FIELD_1[17:17] = 0x0;
 
-			field {
-				name = "FIELD_1";
-				desc = "xxx";
-				sw = r;
-				onread = rclr;
-			} FIELD_1[17:17] = 0x0;
-
-			field {
-				name = "FIELD_2";
-				desc = "xxx";
-				sw = rw;
-				onread = rset;
-				onwrite = woset;
-			} FIELD_2[16:14] = 0x0;
-
-			field {
-				name = "FIELD_3";
-				desc = "xxx";
-				sw = rw;
-				onread = rclr;
-				onwrite = wot;
-			} FIELD_3[13:13] = 0x1;
-		} TEM21 @0xc;
-
-		alias TEM21 tem_alias_1 TEM21_alias @0X10c;
-		TEM21_alias.FIELD_2 -> onwrite = wzc;
-
-		reg tem_alias_2{
-			name = "TEM22";
+		field {
+			name = "FIELD_2";
 			desc = "xxx";
-			regwidth = 32;
+			sw = rw;
+			onread = rset;
+			onwrite = woset;
+			hj_syncresetsignal = "sync_rst_local_1, sync_rst_local_2";
+		} FIELD_2[16:14] = 0x0;
 
-			field {
-				name = "FIELD_1";
-				desc = "xxx";
-				sw = r;
-				onread = rclr;
-			} FIELD_1[17:17] = 0x0;
-
-			field {
-				name = "FIELD_2";
-				desc = "xxx";
-				sw = rw;
-				onread = rset;
-				onwrite = woset;	
-			} FIELD_2[16:14] = 0x0;
-
-			field {
-				name = "FIELD_3";
-				desc = "xxx";
-				sw = rw;
-				onread = rclr;
-				onwrite = wot;
-			} FIELD_3[13:13] = 0x1;
-
-		} TEM22 @0x10;
-
-		alias TEM22 tem_alias_2 TEM22_alias @0X110;
-		TEM22_alias.FIELD_1 -> resetsignal = global_reset;
-		TEM22_alias.FIELD_2 -> onread = rset;
-		TEM22_alias.FIELD_3 -> name = "FIELD_3 ALIAS";
-
-		reg tem_alias_3{
-			name = "TEM23";
+		field {
+			name = "FIELD_3";
 			desc = "xxx";
-			regwidth = 32;
+			sw = rw;
+			onread = rclr;
+			onwrite = wot;
+		} FIELD_3[13:13] = 0x1;
+	} TEM21 @0xc;
 
-			field {
-				name = "FIELD_1";
-				desc = "xxx";
-				sw = r;
-				onread = rclr;
-			} FIELD_1[17:17] = 0x0;
+	alias TEM21 tem_alias_1 TEM21_alias @0X10c;
+	TEM21_alias.FIELD_2 -> onwrite = wzc;
 
-			field {
-				name = "FIELD_2";
-				desc = "xxx";
-				sw = rw;
-				onread = rset;
-				onwrite = woset;
-			} FIELD_2[16:14] = 0x0;
+	reg tem_alias_2{
+		name = "TEM22";
+		desc = "xxx";
+		regwidth = 32;
 
-			field {
-				name = "FIELD_3";
-				desc = "xxx";
-				sw = rw;
-				onread = rclr;
-				onwrite = wot;
-			} FIELD_3[13:13] = 0x1;
-		} TEM23 @0x14;
+		field {
+			name = "FIELD_1";
+			desc = "xxx";
+			sw = r;
+			onread = rclr;
+		} FIELD_1[17:17] = 0x0;
 
-		alias TEM23 tem_alias_3 TEM23_alias @0X114;
-		TEM23_alias.FIELD_1 -> resetsignal = global_reset;
-		TEM23_alias.FIELD_2 -> rclr;
-		TEM23_alias.FIELD_3 -> reset = 0x0;
-	} test1;
+		field {
+			name = "FIELD_2";
+			desc = "xxx";
+			sw = rw;
+			onread = rset;
+			onwrite = woset;	
+		} FIELD_2[16:14] = 0x0;
+
+		field {
+			name = "FIELD_3";
+			desc = "xxx";
+			sw = rw;
+			onread = rclr;
+			onwrite = wot;
+		} FIELD_3[13:13] = 0x1;
+
+	} TEM22 @0x10;
+
+	alias TEM22 tem_alias_2 TEM22_alias @0X110;
+	TEM22_alias.FIELD_2 -> onread = rset;
+	TEM22_alias.FIELD_3 -> name = "FIELD_3 ALIAS";
+
+	reg tem_alias_3{
+		name = "TEM23";
+		desc = "xxx";
+		regwidth = 32;
+
+		field {
+			name = "FIELD_1";
+			desc = "xxx";
+			sw = r;
+			onread = rclr;
+		} FIELD_1[17:17] = 0x0;
+
+		field {
+			name = "FIELD_2";
+			desc = "xxx";
+			sw = rw;
+			onread = rset;
+			onwrite = woset;
+		} FIELD_2[16:14] = 0x0;
+
+		field {
+			name = "FIELD_3";
+			desc = "xxx";
+			sw = rw;
+			onread = rclr;
+			onwrite = wot;
+		} FIELD_3[13:13] = 0x1;
+	} TEM23 @0x14;
+
+	alias TEM23 tem_alias_3 TEM23_alias @0X114;
+	TEM23_alias.FIELD_2 -> rclr;
+	TEM23_alias.FIELD_3 -> reset = 0x0;
+};
+
+reg shared_tem{
+	shared;
+	name = "SHARED";
+	desc = "xxx";
+	regwidth = 32;
+	field {
+		name = "FIELD_1";
+		desc = "xxx";
+		sw = rw;	
+	} FIELD_1[16:14] = 0x0;
+};
+
+addrmap test_map_2 {
+	hj_genrtl = true;
+	shared_tem shared_2;
+	shared_2 -> name = "SHARED_IN_TEST_MAP_2";
+	shared_2.FIELD_1 -> reset = 0X04;
+	shared_2.FIELD_1 -> onread = rset;
+	shared_2.FIELD_1 -> onwrite = wzt;
+};
+
+addrmap test_map_3 {
+	hj_genrtl = false;
+	shared_tem shared_3;
+	shared_3 -> name = "SHARED_IN_TEST_MAP_3";
+	shared_3.FIELD_1 -> reset = 0X07;
+	shared_3.FIELD_1 -> sw = r;
+	shared_3.FIELD_1 -> onread = rclr;
 };
 
 addrmap root_map {
@@ -119,6 +163,4 @@ addrmap root_map {
 	test_map_1_inst -> ispresent = true;
 	test_map_2 test_map_2_inst;
 	test_map_3 test_map_3_inst;
-	test_1 test_1_inst;
-	test_2 test_2_inst;
 };
