Fix: multi-layer synchronous reset signal generation failed

--- a/test/user_defined.rdl
+++ b/test/user_defined.rdl
@@ -2,7 +2,7 @@
 
 // Define synchronous reset signals for regslv blocks
 property hj_syncresetsignal {
-    component = field | reg | regfile | addrmap;
+    component = field;
     type = string;
 };
 
