--- a/generators/rtl/test/case_8/tb/testbench.rdl
+++ b/generators/rtl/test/case_8/tb/testbench.rdl
@@ -13,11 +13,13 @@ mem ext_mem_def {
 addrmap reg_top {
 	addrmap {
 		hj_genrtl = true;
+		hj_cdc = true;
 
 		// implement internal registers
         REG_def REG1;
         // forward reg_native_if to external memory
         // memwidth=128, datawidth=32, implement snapshot module
         external ext_mem_def ext_mem_1;
+		ext_mem_1 -> hj_cdc = true;
 	} reg_block_1;
 };
