fix rtl generation process

--- a/test/test_map.rdl
+++ b/test/test_map.rdl
@@ -148,4 +148,6 @@ addrmap root_map {
 	test_map_1 test_map_1_inst;
 	test_map_2 test_map_2_inst;
 	test_map_3 test_map_3_inst;
+	ipxact_block_example ipxact_block_example_inst;
+	ipxact_block_example_inst -> hdl_path = ""
 };
