add: register model preprocessing

--- a/test/test_map.rdl
+++ b/test/test_map.rdl
@@ -125,6 +125,11 @@ reg shared_tem{
 		desc = "xxx";
 		sw = rw;
 	} FIELD_1[16:14] = 0x0;
+	field {
+		name = "FIELD_1";
+		desc = "xxx";
+		sw = rw;
+	} FIELD_2[13:12] = 0x0;
 };
 
 addrmap test_map_2 {
@@ -137,8 +142,7 @@ addrmap test_map_2 {
 
 addrmap test_map_3 {
 	hj_genrtl = false;
-	shared_tem shared_3[5];
-	shared_3 -> hdl_path = "shared_3";
+	shared_tem shared_3;
 	shared_3 -> name = "SHARED_IN_TEST_MAP_3";
 	shared_3.FIELD_1 -> sw = r;
 	shared_3.FIELD_1 -> onread = rclr;
@@ -147,9 +151,7 @@ addrmap test_map_3 {
 addrmap root_map {
 	hdl_path = "regmst_root_map";
 	test_map_1 test_map_1_inst;
-	test_map_1_inst -> hdl_path = "test_map_1_inst";
 	test_map_2 test_map_2_inst;
 	test_map_3 test_map_3_inst;
 	ipxact_block_example ipxact_block_example_inst;
-	ipxact_block_example_inst -> hdl_path = "ipxact_block_example";
 };
