--- a/generators/pdf/templates/org.jinja2
+++ b/generators/pdf/templates/org.jinja2
@@ -1,9 +1,13 @@
 {# macro definitions #}
 {%- macro addr_block_def(node) -%}
 {{'*' * get_hier_depth(node)}} {{get_abs_addr(node)}}-{{get_end_addr(node)}} {{get_inst_name(node)}}
-Hierarchy: {{get_hier_name(node)}}
-Absolute Base Address: {{get_abs_addr(node)}}
-Size: {{get_size(node)}} Bytes
+Hierarchy: ~{{get_hier_name(node)}}~ \\
+Absolute Base Address: {{get_abs_addr(node)}} \\
+Size: {{get_size(node)}} Bytes \\
+{%- if get_property(node, "desc") is not none %}
+Description: {{get_property(node, "desc")}} \\
+{%- endif %}
+
 {% endmacro %}
 
 {%- macro mem_def(node) -%}
@@ -11,12 +15,14 @@ Size: {{get_size(node)}} Bytes
 {%- endmacro %}
 
 {%- macro reg_def(node) -%}
-{{'*' * get_hier_depth(node)}} {{get_inst_name(node)}}
-Hierarchy: {{get_hier_name(node)}}
-Absolute Address: {{get_abs_addr(node)}}
-Base Offset: {{get_offset(node)}}
-Width: {{get_size(node)}}
-Description: {{get_property(node, "desc")}}
+{{'*' * get_hier_depth(node)}} {{get_abs_addr(node)}}-{{get_end_addr(node)}} {{get_inst_name(node)}}
+Hierarchy: ~{{get_hier_name(node)}}~ \\
+Absolute Address: {{get_abs_addr(node)}} \\
+Base Offset: {{get_offset(node)}} \\
+Size: {{get_size(node)}} Bytes \\
+{%- if get_property(node, "desc") is not none %}
+Description: {{get_property(node, "desc")}} \\
+{%- endif %}
 
 {% raw %}#+ATTR_LATEX: :environment longtable :align |c|p{0.3\textwidth}|p{0.2\textwidth}|c|l|l|
 |-------+----------+-----------------+---------------+-----------|
@@ -27,6 +33,7 @@ Description: {{get_property(node, "desc")}}
 {%- endfor -%}
 {% raw %}
 |-------+----------+-----------------+---------------+-----------|
+
 {% endraw %}
 
 {%- for field in node.fields() -%}
@@ -36,35 +43,36 @@ Description: {{get_property(node, "desc")}}
 
 {%- macro field_row(node) %}
 {{"| %2d:%-2d | %8s | %15s | %2s,%4s,%-5s | %-9s |"|format(node.msb, node.lsb,
-                                                         get_inst_name(node),
-                                                         get_property(node, "reset"),
-                                                         get_property(node, "sw"),
-                                                         get_property(node, "onread"),
-                                                         get_property(node, "onwrite"),
-                                                         get_property(node, "hw"))}}
+                                                           get_inst_name(node),
+                                                           get_property(node, "reset"),
+                                                           get_property(node, "sw"),
+                                                           get_property(node, "onread"),
+                                                           get_property(node, "onwrite"),
+                                                           get_property(node, "hw"))}}
 {%- endmacro %}
 
-{%- macro field_desc(node) %}
+{%- macro field_desc(node) -%}
 *{{get_inst_name(node)}}*
 {%- if get_property(node, "name") is not none %}
-    + Also named as: {{get_property(node, "name")}}
+    + named as: {{get_property(node, "name")}}
 {%- endif %}
 {%- if get_property(node, "hj_syncresetsignal") is not none %}
-    + Synchronous Reset Signals: {{get_property(node, "hj_syncresetsignal")}}
+    + synchronous reset signals: ~{{get_property(node, "hj_syncresetsignal")}}~
 {%- endif %}
 {%- if get_property(node, "desc") is not none %}
-    + Description: {{get_property(node, "desc")}}
+    + description: {{get_property(node, "desc")}}
 {%- endif %}
+
 {% endmacro %}
 
 {%- macro child_def(node) -%}
-{%- if isinstance(node, RegNode) -%}
-{{reg_def(node)}}
-{%- elif isinstance(node, (RegfileNode, AddrmapNode)) -%}
-{{addr_block_def(node)}}
-{%- elif isinstance(node, MemNode) -%}
-{{mem_def(node)}}
-{%- endif -%}
+    {%- if isinstance(node, RegNode) -%}
+        {{reg_def(node)}}
+    {%- elif isinstance(node, (RegfileNode, AddrmapNode)) -%}
+        {{addr_block_def(node)}}
+    {%- elif isinstance(node, MemNode) -%}
+        {{mem_def(node)}}
+    {%- endif -%}
 {%- endmacro -%}
 
 
