--- a/generators/rtl/test/case_4/tb/testbench.rdl
+++ b/generators/rtl/test/case_4/tb/testbench.rdl
@@ -7,7 +7,7 @@ reg REG_def {
 
 addrmap reg_top {
 	addrmap {
-		hj_genrtl = true;
+		hj_genslv = true;
 
 		// implement internal registers
 		REG_def REG1_ONWRITE_NA;
