--- a/generators/rtl/test/case_8/tb/testbench.rdl
+++ b/generators/rtl/test/case_8/tb/testbench.rdl
@@ -12,7 +12,7 @@ mem ext_mem_def {
 
 addrmap reg_top {
 	addrmap {
-		hj_genrtl = true;
+		hj_genslv = true;
 		hj_cdc = true;
 
 		// implement internal registers
