--- a/generators/rtl/templates/regdisp_template.jinja
+++ b/generators/rtl/templates/regdisp_template.jinja
@@ -21,7 +21,7 @@ module {{get_rtl_name(disp_node)}} (
 
     parameter   ADDR_WIDTH                              = {{addr_width}};
     parameter   DATA_WIDTH                              = {{data_width}};
-    parameter   FORWARD_NUM                             = {{get_child_num(disp_node)}};
+    parameter   FORWARD_NUM                             = {{get_forward_num(disp_node)}};
     parameter   [FORWARD_NUM-1:0]   INSERT_FORWARD_DFF  = {FORWARD_NUM{1'b0}};
     parameter   INSERT_BACKWARD_DFF                     = 0;
     parameter   [FORWARD_NUM-1:0]   GEN_OFFSET          = {FORWARD_NUM{1'b0}};
@@ -71,8 +71,8 @@ module {{get_rtl_name(disp_node)}} (
         if_sel = {FORWARD_NUM{1'b0}};
         no_sel = 1'b0;
         unique casez (upstream__addr[{{dec_addr_bit|join(":")}}])
-        {% for expr in dec_expr %}
-            {{expr|join(",")}}: if_sel[{{loop.index0}}] = 1'b1;
+        {% for child in disp_node.children(unroll=True, skip_not_present=False) %}
+            {{get_comp_addr(child)|join(",")}}: if_sel[{{loop.index0}}] = 1'b1;
         {% endfor %}
             default: no_sel = 1'b1;
         endcase
@@ -109,11 +109,11 @@ module {{get_rtl_name(disp_node)}} (
     //          simply set several higher bits to 0 by wire slicing
     //      2. otherwise:
     //          subtract base address from absolute address by generating a subtractor
-{% for child_inst in disp_node.children %}
-    {% if use_abs_addr(child_inst) %}
+{% for child in disp_node.children(unroll=True, skip_not_present=False) %}
+    {% if use_abs_addr(child) %}
     {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d];"|format(loop.index0,
                                                                              loop.index0)|indent}}
-    {% elif is_aligned(child_inst) %}
+    {% elif is_aligned(child) %}
     {{"assign  downstream__addr_pre[%d] = {%d'b0, downstream__addr_imux[%d][%d:0]};"|format(loop.index0,
                                                                                             cut_bit(child_inst),
                                                                                             loop.index0,
