--- a/generators/rtl/templates/regdisp_template.jinja
+++ b/generators/rtl/templates/regdisp_template.jinja
@@ -22,9 +22,8 @@ module {{get_rtl_name(disp_node)}} (
     parameter   ADDR_WIDTH                              = {{addr_width}};
     parameter   DATA_WIDTH                              = {{data_width}};
     parameter   FORWARD_NUM                             = {{get_forward_num(disp_node)}};
-    parameter   [FORWARD_NUM-1:0]   INSERT_FORWARD_DFF  = {FORWARD_NUM{1'b0}};
-    parameter   INSERT_BACKWARD_DFF                     = 0;
-    parameter   [FORWARD_NUM-1:0]   GEN_OFFSET          = {FORWARD_NUM{1'b0}};
+    parameter   [0:FORWARD_NUM-1]   INSERT_FORWARD_DFF  = {{use_forward_ff(disp_node)|join(",")}};
+    parameter   INSERT_BACKWARD_DFF                     = {{use_backward_ff(disp_node)}};
 
     input   logic   clk, rst_n;
 
@@ -105,26 +104,26 @@ module {{get_rtl_name(disp_node)}} (
     // NOTE: this part needs template generation
     // there are two methods to convert absolute address to offset,
     // which depends on the base address alignment:
-    //      1. base_addr = N * pow(2, round(log2(total_size))+1):
+    //      1. base_addr = N * pow(2, ceil(log2(total_size))):
     //          simply set several higher bits to 0 by wire slicing
     //      2. otherwise:
     //          subtract base address from absolute address by generating a subtractor
-{% for child in disp_node.children(unroll=True, skip_not_present=False) %}
-    {% if use_abs_addr(child) %}
-    {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d];"|format(loop.index0,
-                                                                             loop.index0)|indent}}
-    {% elif is_aligned(child) %}
-    {{"assign  downstream__addr_pre[%d] = {%d'b0, downstream__addr_imux[%d][%d:0]};"|format(loop.index0,
-                                                                                            cut_bit(child_inst),
-                                                                                            loop.index0,
-                                                                                            addr_width-cut_bit(child_inst))|indent}}
-    {% else %}
-    {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d] - %d'h%x;"|format(loop.index0,
-                                                                                      loop.index0,
-                                                                                      addr_width,
-                                                                                      child_inst.absolute_address)|indent}}
-    {% endif %}
-{% endfor %}
+    {%- for child in disp_node.children(unroll=True, skip_not_present=False) -%}
+        {%- if use_abs_addr(child) -%}
+        {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d];"|format(loop.index0,
+                                                                                 loop.index0)|indent}}
+        {%- elif is_aligned(child) -%}
+        {{"assign  downstream__addr_pre[%d] = {%d'b0, downstream__addr_imux[%d][%d:0]};"|format(loop.index0,
+                                                                                                addr_width-remain_bit(child),
+                                                                                                loop.index0,
+                                                                                                remain_bit(child)-1)|indent}}
+        {%- else -%}
+        {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d] - %d'h%x;"|format(loop.index0,
+                                                                                          loop.index0,
+                                                                                          addr_width,
+                                                                                          child.absolute_address)|indent}}
+        {%- endif -%}
+    {%- endfor -%}
 
     // insert forwarding flip-flops
     genvar cnt;
